--- a/Client/Website/src/app/components/room/quick-availability/quick-availability.component.scss
+++ b/Client/Website/src/app/components/room/quick-availability/quick-availability.component.scss
@@ -4,7 +4,13 @@
     width: 95%;
     background-color: white;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    
+}
 
+.flex {
+    
+    display: flex;
+    justify-content: center;
 }
 
 td {
@@ -13,9 +19,9 @@ td {
 
 .content {
 
-    padding-left: 16px;
+    // padding-left: 16px;
     padding-top: 16px;
-    padding-right: 16px;
+    // padding-right: 16px;
     text-transform: uppercase;
     font-family: 'Kulim Park';
     font-style: normal;
@@ -41,6 +47,12 @@ td {
     letter-spacing: 0.07em;
 
     color: #FFFFFF;
+
+}
+
+.check-btn:disabled {
+
+    background: gray;
 
 }
 
