--- a/Client/Website/src/app/pages/chat/chat.component.scss
+++ b/Client/Website/src/app/pages/chat/chat.component.scss
@@ -13,8 +13,8 @@
     font-size: 24px;
     align-items: center;
     text-align: center;
-    padding-top: 13%;
-    padding-left: 13%;
+    // padding-top: 13%;
+    // padding-left: 13%;
 
 }
 
