Started Designing Restaurant Page🍴
1. Design, Implement and Link Restaurant Page
2. 10
3. Started the design of the page.

--- a/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.html
+++ b/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.html
@@ -1,1 +1,12 @@
-<p>restaurant works!</p>
+<div class="restaurant-header">
+<app-nav-bar [transparent]="true"></app-nav-bar>
+
+</div>
+<div class="restaurant-container">
+    <h1 class="restaurant-title">RESTAURANT</h1>
+</div>
+<div style="display: flex;justify-content: center;">
+<p style="width: 50%;align-self: center;color: #14274A; font-weight: 500;">
+    Indulge in a culinary adventure at our hotel's website restaurant, where each bite is a thrilling explosion of flavors. Led by a team of skilled chefs, our dining destination will take you on a journey of taste, with dishes crafted from the freshest ingredients and innovative techniques.
+</p>
+</div>  
