--- a/Client/Website/src/styles.scss
+++ b/Client/Website/src/styles.scss
@@ -35,6 +35,7 @@ $Application-theme: mat.define-light-theme((
 
 @import url("https://fonts.googleapis.com/css?family=Montserrat:500,700");
 @import url("https://fonts.googleapis.com/css?family=Abhaya+Libre:400,700");
+@import url("https://fonts.googleapis.com/css?family=Inter:400,700");
 @import url('https://fonts.googleapis.com/css2?family=Kulim+Park:wght@200;400&display=swap');
 @import '../node_modules/css-star-rating/css/star-rating';
 
