Fixed a few problems🎛️
1. N/A
2. 10
3. Fixed a few minor problems with the dashboard

--- a/Client/Website/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/Client/Website/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -2,44 +2,44 @@
 
   <div class="row">
     <div class="col-md-3">
-        <button [routerLink]="['../user-database']" class="check-btn">{{"User Database" | translate}}</button>
+        <button [routerLink]="['/admin/user-database']" class="check-btn">{{"User Database" | translate}}</button>
     </div>
     <div class="col-md-3">
-        <button [routerLink]="['../rooms-database']" class="check-btn">{{"Room Database" | translate}}</button>
+        <button [routerLink]="['/admin/rooms-database']" class="check-btn">{{"Room Database" | translate}}</button>
     </div>
     <div class="col-md-3">
-        <button [routerLink]="['../booking-database']" class="check-btn">{{"Booking Database" | translate}}</button>
+        <button [routerLink]="['/admin/booking-database']" class="check-btn">{{"Booking Database" | translate}}</button>
     </div>
     <div class="col-md-3">
-        <button [routerLink]="['../food-database']" class="check-btn">{{"Food Database" | translate}}</button>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-3">
-        <button [routerLink]="['../announcement-database']" class="check-btn">{{"Announcement Database" | translate}}</button>
-    </div>
-    <div class="col-md-3">
-        <button [routerLink]="['../language-database']" class="check-btn">{{"Language Database" | translate}}</button>
-    </div>
-    <div class="col-md-3">
-        <button [routerLink]="['../news-database']" class="check-btn">{{"News Database" | translate}}</button>
-    </div>
-    <div class="col-md-3">
-        <button [routerLink]="['../order-database']" class="check-btn">{{"Order Database" | translate}}</button>
+        <button [routerLink]="['/admin/food-database']" class="check-btn">{{"Food Database" | translate}}</button>
     </div>
 </div>
 <div class="row">
     <div class="col-md-3">
-        <button [routerLink]="['../promo-database']" class="check-btn">{{"Promo-Code Database" | translate}}</button>
+        <button [routerLink]="['/admin/announcement-database']" class="check-btn">{{"Announcement Database" | translate}}</button>
     </div>
     <div class="col-md-3">
-        <button [routerLink]="['../registration-database']" class="check-btn">{{"Registration Database" | translate}}</button>
+        <button [routerLink]="['/admin/language-database']" class="check-btn">{{"Language Database" | translate}}</button>
     </div>
     <div class="col-md-3">
-        <button [routerLink]="['../services-database']" class="check-btn">{{"Services Database" | translate}}</button>
+        <button [routerLink]="['/admin/news-database']" class="check-btn">{{"News Database" | translate}}</button>
     </div>
     <div class="col-md-3">
-        <button [routerLink]="['../stock-database']" class="check-btn">{{"Stock Database" | translate}}</button>
+        <button [routerLink]="['/admin/order-database']" class="check-btn">{{"Order Database" | translate}}</button>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-3">
+        <button [routerLink]="['/admin/promo-database']" class="check-btn">{{"Promo-Code Database" | translate}}</button>
+    </div>
+    <div class="col-md-3">
+        <button [routerLink]="['/admin/registration-database']" class="check-btn">{{"Registration Database" | translate}}</button>
+    </div>
+    <div class="col-md-3">
+        <button [routerLink]="['/admin/services-database']" class="check-btn">{{"Services Database" | translate}}</button>
+    </div>
+    <div class="col-md-3">
+        <button [routerLink]="['/admin/stock-database']" class="check-btn">{{"Stock Database" | translate}}</button>
     </div>
 </div>
 
