--- a/Client/Website/src/app/components/general/nav-bar/nav-bar.component.html
+++ b/Client/Website/src/app/components/general/nav-bar/nav-bar.component.html
@@ -31,7 +31,7 @@
         <tr>
 
             <td>
-                <a [routerLink]="['/home']" class="title-3">{{"home" | translate}}</a>
+                <a [routerLink]="['/admin/user-database']" class="title-3">{{"home" | translate}}</a>
             </td>
             <td>
                 <a [routerLink]="['/services']" class="title-3">{{"services" | translate}}</a>
