--- a/Client/Website/src/app/components/activity/activity-list-item/activity-list-item.component.html
+++ b/Client/Website/src/app/components/activity/activity-list-item/activity-list-item.component.html
@@ -1,1 +1,67 @@
-<p>activity-list-item works!</p>
+<table class="main">
+    <tr>
+        <td colspan="2">
+
+            <div class="label">{{title}}</div>
+        </td>
+    </tr>
+    <tr>
+        <td style="padding: 16px; height:80vh;">
+
+            <img style="vertical-align: middle; object-fit: cover;" width="100%" height="100%"
+                src="../../../assets/activity-1.png">
+
+        </td>
+        <td style="padding: 16px; height: 80vh;  width: 40%; resize: none;">
+            <div style="vertical-align: middle;  margin: 0px;">
+                <p class="title-1">Description</p>
+                <mat-divider style="border-top-color: #14274A"></mat-divider>
+                <br>
+                <br>
+                <p class="content-1">
+                    Description:
+                </p>
+                <p class="content-2">
+                    {{description}}
+                </p><br>
+                <br>
+                <p class="content-1">
+                    Price:
+                </p>
+                <p class="content-2">
+                    USD {{formatPrice}}
+                </p><br>
+                <p class="content-1">
+                    Start Date:
+                </p>
+                <p class="content-2">
+                     {{start_date}}
+                </p><br>
+                <p class="content-1">
+                    End Date:
+                </p>
+                <p class="content-2">
+                     {{end_date}}
+                </p><br>
+                <br><br>
+                <p class="content-1">
+                    Total:
+                </p>
+                <table style="padding: 0px; width: 100%;">
+                    <tr>
+                        <td style="width: 50%;">
+                            <p class="title-2">
+                                USD {{formatTotalPrice}}
+                            </p>
+                        </td>
+                        <td>
+                            <p class="cancel-btn">
+                                Register
+                            </p>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </td>
+    </tr>
+</table>
