Fixed the Background Color🍴
1. Design, Implement and Link Restaurant Page
2. 10
3. Added navy blended background to the picture.

--- a/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.scss
+++ b/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.scss
@@ -3,8 +3,9 @@
     background-size: cover;
     background-position: center;
     height: 100vh;
+    background-color: #14274A7e;
+    background-blend-mode: soft-light;
 }
-
 
 .restaurant-container{
     display: flex;
