Updated the Design🍴
1. Design, Implement and Link Restaurant Page
2. 10
3. Added a new pic along with the titles in the header and paragraph.

--- a/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.html
+++ b/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.html
@@ -1,12 +1,28 @@
 <div class="restaurant-header">
-<app-nav-bar [transparent]="true"></app-nav-bar>
-
+    <app-nav-bar [transparent]="true"></app-nav-bar>
+    <div class="title-container">
+        <p class="title-1">Welcome to</p>
+        <p class="title-2">Purple</p>
+        <p class="title-3">Motel</p>
+        <p class="title-4">Book your stay and enjoy Luxury <br>redefined at the most affordable
+            rates.</p>
+    </div>
 </div>
-<div class="restaurant-container">
-    <h1 class="restaurant-title">RESTAURANT</h1>
-</div>
+<h1 class="restaurant-title">RESTAURANT</h1>
 <div style="display: flex;justify-content: center;">
-<p style="width: 50%;align-self: center;color: #14274A; font-weight: 500;">
-    Indulge in a culinary adventure at our hotel's website restaurant, where each bite is a thrilling explosion of flavors. Led by a team of skilled chefs, our dining destination will take you on a journey of taste, with dishes crafted from the freshest ingredients and innovative techniques.
-</p>
-</div>  
+    <p class="restaurant-parag">
+        Indulge in a culinary adventure at our hotel's website restaurant, where each bite is a thrilling explosion of
+        flavors. Led by a team of skilled chefs, our dining destination will take you on a journey of taste, with dishes
+        crafted from the freshest ingredients and innovative techniques.
+    </p>
+</div>
+
+<div class="restaurant-container">
+    <img src="../../../../../assets/Chefs.png" width="100%">
+</div>
+
+<h1 class="restaurant-title">MENU</h1>
+<div style="display: flex;justify-content: center;">
+    <p class="restaurant-parag">The menu changes seasonally to ensure that the ingredients are at the peak of their
+        flavor, and the chefs are always experimenting with new techniques and recipes to keep things exciting.</p>
+</div>
