--- a/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.scss
+++ b/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.scss
@@ -1,4 +1,4 @@
-.restaurant-header{
+.restaurant-header {
     background: url('../../../../../assets/restaurant-paris.png');
     background-size: cover;
     background-position: center;
@@ -7,15 +7,66 @@
     background-blend-mode: soft-light;
 }
 
-.restaurant-container{
+.restaurant-container {
     display: flex;
     justify-content: center;
-    
+    align-items: center;
+
 }
-.restaurant-title{
+
+
+.restaurant-parag {
+    width: 50%;
+    align-self: center;
+    color: #14274A;
+    font-weight: 500;
+    text-align: center;
+}
+
+.restaurant-title {
     color: #14274A;
     font-weight: 142px;
     font-size: 40px;
     letter-spacing: 0.05em;
     padding-top: 10px;
+    text-align: center;
+}
+
+
+
+.title {
+    text-transform: uppercase;
+    color: white;
+}
+
+.title-1 {
+    @extend .title;
+    font-family: 'Kulim Park';
+    font-size: 32px;
+}
+
+.title-2 {
+    @extend .title;
+    font-family: 'Kulim Park';
+    font-size: 78px;
+}
+
+.title-3 {
+    @extend .title;
+    font-family: 'Kulim Park';
+    font-size: 64px;
+}
+
+.title-4 {
+    @extend .title;
+    font-family: 'Kulim Park';
+    font-size: 16px;
+    font-weight: 550;
+
+}
+
+.title-container {
+    margin-left: 128px;
+    margin-top: 32px;
+   
 }
