--- a/Client/Website/src/app/components/room/room-item/room-item.component.html
+++ b/Client/Website/src/app/components/room/room-item/room-item.component.html
@@ -17,7 +17,7 @@
                 </p>
             </td>
             <td>
-                <button class="check-btn" [routerLink]="'../details/' + room?.key">
+                <button class="check-btn" (click)="route()">
                     View Details
                 </button>
             </td>
