Fixed Some Mistakes🍴
1. Design, Implement and Link Restaurant Page
2. 10
3. Fixed the titles by removing the margin and added lines between the headers and paragraphs.

--- a/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.html
+++ b/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.html
@@ -9,6 +9,7 @@
     </div>
 </div>
 <h1 class="restaurant-title">RESTAURANT</h1>
+<hr style="color: #14274A;width: 90%;">
 <div style="display: flex;justify-content: center;">
     <p class="restaurant-parag">
         Indulge in a culinary adventure at our hotel's website restaurant, where each bite is a thrilling explosion of
@@ -22,6 +23,7 @@
 </div>
 
 <h1 class="restaurant-title">MENU</h1>
+<hr style="color: #14274A;width: 90%;">
 <div style="display: flex;justify-content: center;">
     <p class="restaurant-parag">The menu changes seasonally to ensure that the ingredients are at the peak of their
         flavor, and the chefs are always experimenting with new techniques and recipes to keep things exciting.</p>
