Added the Buttons🍴
1. Design, Implement and Link Restaurant Page
2. 10
3. Added the view menu and feedback buttons.

--- a/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.html
+++ b/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.html
@@ -28,3 +28,8 @@
     <p class="restaurant-parag">The menu changes seasonally to ensure that the ingredients are at the peak of their
         flavor, and the chefs are always experimenting with new techniques and recipes to keep things exciting.</p>
 </div>
+
+<div style="display: flex;justify-content: center;">
+    <button class="menu-button">View Menu</button>
+    <button class="feedback-button">FEEDBACK</button>
+</div>
