--- a/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.scss
+++ b/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.scss
@@ -71,3 +71,23 @@
     margin-top: 32px;
    
 }
+
+.menu-button{
+    background-color: #14274A;
+    color: white;
+    margin: 10px;
+    padding: 20px;
+    width: 200px;
+    margin: 20px;
+    font-size: 20px
+    
+}
+.feedback-button{
+    background-color: white;
+    color: #14274A;
+    border-color: white;
+    padding: 10px;
+    width: 150px;
+    margin: 20px;
+    font-size: 14px
+}
