Finalized the Page🍴
1. Design, Implement and Link Restaurant Page
2. 10
3. Added the last button and fixed padding.

--- a/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.html
+++ b/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.html
@@ -20,6 +20,7 @@
 
 <div class="restaurant-container">
     <img src="../../../../../assets/Chefs.png" width="100%">
+    <button class="chefs-button">THE CHEFS</button>
 </div>
 
 <h1 class="restaurant-title">MENU</h1>
