--- a/Client/Website/src/app/components/room/calendar/calendar.component.html
+++ b/Client/Website/src/app/components/room/calendar/calendar.component.html
@@ -5,9 +5,17 @@
       <input matEndDate formControlName="end" placeholder="End date">
     </mat-date-range-input>
     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-date-range-picker #picker></mat-date-range-picker>
+    <mat-date-range-picker #picker>
+
+      <mat-datepicker-actions>
+        <button mat-button matDatepickerCancel>Cancel</button>
+        <button mat-raised-button color="primary" matDatepickerApply>Apply</button>
+      </mat-datepicker-actions>
+    
+    </mat-date-range-picker>
   
     <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
     <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
   </mat-form-field>
+  <button mat-raised-button (click)="downloadConflicts()">Open</button>
   
