Modified the Page by Adding Translation🍴
1. Design, Implement and Link Restaurant Page
2. 10
3. Added translation to all the texts.

--- a/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.html
+++ b/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.html
@@ -1,36 +1,32 @@
 <div class="restaurant-header">
     <app-nav-bar [transparent]="true"></app-nav-bar>
     <div class="title-container">
-        <p class="title-1">Welcome to</p>
-        <p class="title-2">Purple</p>
-        <p class="title-3">Motel</p>
-        <p class="title-4">Book your stay and enjoy Luxury <br>redefined at the most affordable
-            rates.</p>
+        <p class="title-1">{{"welcome_to" | translate}}</p>
+        <p class="title-2">{{"purple" | translate}}</p>
+        <p class="title-3">{{"motel" | translate}}</p>
+        <p class="title-4">{{"hotel_introduction" | translate}}</p>
     </div>
 </div>
-<h1 class="restaurant-title">RESTAURANT</h1>
+<h1 class="restaurant-title">{{"restaurant" | translate}}</h1>
 <hr style="color: #14274A;width: 90%;">
 <div style="display: flex;justify-content: center;">
     <p class="restaurant-parag">
-        Indulge in a culinary adventure at our hotel's website restaurant, where each bite is a thrilling explosion of
-        flavors. Led by a team of skilled chefs, our dining destination will take you on a journey of taste, with dishes
-        crafted from the freshest ingredients and innovative techniques.
+        {{"restaurant_introduction" | translate}}
     </p>
 </div>
 
 <div class="restaurant-container">
     <img src="../../../../../assets/Chefs.png" width="100%">
-    <button class="chefs-button">THE CHEFS</button>
+    <button class="chefs-button">{{"chefs" | translate}}</button>
 </div>
 
-<h1 class="restaurant-title">MENU</h1>
+<h1 class="restaurant-title">{{"menu" | translate}}</h1>
 <hr style="color: #14274A;width: 90%;">
 <div style="display: flex;justify-content: center;">
-    <p class="restaurant-parag">The menu changes seasonally to ensure that the ingredients are at the peak of their
-        flavor, and the chefs are always experimenting with new techniques and recipes to keep things exciting.</p>
+    <p class="restaurant-parag">{{"menu_introduction" | translate}}</p>
 </div>
 
 <div style="display: flex;justify-content: center;">
-    <button class="menu-button">View Menu</button>
-    <button class="feedback-button">FEEDBACK</button>
+    <button class="menu-button">{{"view_menu" | translate}}</button>
+    <button class="feedback-button">{{"feedback" | translate}}</button>
 </div>
