--- a/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.scss
+++ b/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.scss
@@ -31,6 +31,7 @@
     letter-spacing: 0.05em;
     padding-top: 10px;
     text-align: center;
+    text-transform: uppercase;
 }
 
 
@@ -80,7 +81,8 @@
     padding: 20px;
     width: 250px;
     margin: 20px;
-    font-size: 20px
+    font-size: 20px;
+    text-transform: uppercase;
 }
 
 .feedback-button {
@@ -90,7 +92,8 @@
     padding: 10px;
     width: 150px;
     margin: 20px;
-    font-size: 14px
+    font-size: 14px;
+    text-transform: uppercase;
 }
 
 .chefs-button {
@@ -100,6 +103,6 @@
     color: #14274A;
     padding: 20px;
     width: 250px;
-    font-size: 20px
-
+    font-size: 20px;
+    text-transform: uppercase;
 }
