--- a/Client/Website/src/app/components/room/room-details/room-details.component.scss
+++ b/Client/Website/src/app/components/room/room-details/room-details.component.scss
@@ -82,6 +82,10 @@
     font-style: normal;
     color: #14274A;
 
+    position: relative;
+
+
+    bottom: 40px;
     font-weight: 400;
     font-size: 16px;
     padding: 8px;
@@ -92,4 +96,11 @@
 
     background: #FFFFFF;
     border: 1px solid #14274A;
+}
+
+.cancel-btn:hover {
+    
+    background: #ababab;
+
+
 }
