Added Front-End Validation to the Calendar🏡
1. Design, Implement and Link Rooms Page
2. 10
3. Added front-end validation to the calendar.

--- a/Client/Website/src/app/components/room/room-details/room-details.component.html
+++ b/Client/Website/src/app/components/room/room-details/room-details.component.html
@@ -44,7 +44,7 @@
                             </p>
                         </td>
                         <td>
-                            <app-calendar style="position: relative; top: 36px" [invisible_input]="true" #calendar [room_id]="room?.key"></app-calendar>
+                            <app-calendar (result)="addBooking($event)" style="position: relative; top: 36px" [invisible_input]="true" #calendar [room_id]="room?.key"></app-calendar>
                             <p (click)="calendar.downloadConflicts()" class="cancel-btn">
                                 Book
                             </p>
