--- a/Client/Website/src/app/components/room/calendar/calendar.component.html
+++ b/Client/Website/src/app/components/room/calendar/calendar.component.html
@@ -1,20 +1,22 @@
 <mat-form-field [style.visibility]="invisible_input? 'hidden': 'visible'" appearance="fill">
-    <mat-label>Enter a date range</mat-label>
-    <mat-date-range-input (ngModelChange)="emit()" [dateFilter]="filter" [formGroup]="range" [rangePicker]="picker">
-      <input matStartDate formControlName="start" placeholder="Start date">
-      <input matEndDate formControlName="end" placeholder="End date">
-    </mat-date-range-input>
-    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-date-range-picker #picker>
+  <mat-label>Enter a date range</mat-label>
+  <mat-date-range-input (dateInput)="addEvent('input', $event)" (dateChange)="onDateSelected($event)"
+    (ngModelChange)="emit()" [dateFilter]="filter" [formGroup]="range" [rangePicker]="picker">
+    <input matStartDate formControlName="start" placeholder="Start date">
+    <input matEndDate formControlName="end" placeholder="End date">
+  </mat-date-range-input>
+  <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+  <mat-date-range-picker #picker>
 
-      <mat-datepicker-actions>
-        <button mat-button matDatepickerCancel>Cancel</button>
-        <button mat-raised-button color="primary" matDatepickerApply>Apply</button>
-      </mat-datepicker-actions>
-    
-    </mat-date-range-picker>
-  
-    <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
-    <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
-  </mat-form-field>
-  
+    <mat-datepicker-actions>
+      <button mat-button>Cancel</button>
+      <button mat-raised-button color="primary">Apply</button>
+    </mat-datepicker-actions>
+
+  </mat-date-range-picker>
+
+  <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
+  <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+</mat-form-field>
+
+{{ range.value | json }}
