--- a/Client/Website/src/app/components/room/calendar/calendar.component.html
+++ b/Client/Website/src/app/components/room/calendar/calendar.component.html
@@ -1,19 +1,21 @@
 <mat-form-field [style.visibility]="invisible_input? 'hidden': 'visible'" appearance="fill">
   <mat-label>Enter a date range</mat-label>
-  <mat-date-range-input #picker_range [dateFilter]="filter" [formGroup]="range" [rangePicker]="picker">
-    <input #input1 matStartDate formControlName="start" placeholder="Start date">
+  <mat-date-range-input #picker_range [dateFilter]="filter" [formGroup]="range"
+    [rangePicker]="picker">
+    <input matStartDate formControlName="start" placeholder="Start date">
     <input matEndDate formControlName="end" placeholder="End date">
-    </mat-date-range-input>
-    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-date-range-picker #picker>
+  </mat-date-range-input>
+  <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+  <mat-date-range-picker #picker>
 
-      <!-- <mat-datepicker-actions> -->
-        <!-- <button mat-button matDatepickerCancel>Cancel</button>
-        <button mat-raised-button color="primary" matDatepickerApply>Apply</button> -->
-      <!-- </mat-datepicker-actions> -->
+    <mat-datepicker-actions>
+      <button mat-button matDatepickerCancel>Cancel</button>
+      <button mat-raised-button color="primary" matDatepickerApply>Book</button>
+    </mat-datepicker-actions>
 
-    </mat-date-range-picker>
+  </mat-date-range-picker>
 
-    <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
-    <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+  <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start
+    date</mat-error>
+  <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
 </mat-form-field>
