--- a/Client/Website/src/app/components/room/room-details/room-details.component.html
+++ b/Client/Website/src/app/components/room/room-details/room-details.component.html
@@ -8,14 +8,14 @@
     <tr>
         <td style="padding: 16px; width: 60%;">
 
-            <img [src]="room?.value?.image_path ? room!.value.image_path : '../../../assets/room-1.png'" width="100%"
-                src="../../../assets/room-1.png">
+            <img [src]="room?.value?.image_path ? room!.value.image_path : '../../../assets/room-1.png'"
+                width="100%" src="../../../assets/room-1.png">
 
         </td>
-        <td style="padding: 16px; width: 40%;">
+        <td style="padding: 16px; width: 40%;" *ngIf="room && room_type">
             <div style="display: flex;">
-                <star-rating [showHalfStars]="true" [rating]="room?.value?.rating || 0" [readOnly]="true"
-                    staticColor="positive"></star-rating>
+                <star-rating [showHalfStars]="true" [rating]="room.value.rating || 0"
+                    [readOnly]="true" staticColor="positive"></star-rating>
             </div>
             <br>
             <div style="vertical-align: middle;">
@@ -23,7 +23,7 @@
                 <mat-divider style="border-top-color: white"></mat-divider>
                 <br>
                 <p class="content-2">
-                    {{room?.value?.description}}
+                    {{room.value.description}}
                 </p>
                 <br>
                 <p class="content-1">
@@ -44,7 +44,9 @@
                             </p>
                         </td>
                         <td>
-                            <app-calendar (result)="addBooking($event)" style="position: relative; top: 36px" [invisible_input]="true" #calendar [room_id]="room?.key"></app-calendar>
+                            <app-calendar (result)="addBooking($event)"
+                                style="position: relative; top: 36px" [invisible_input]="true"
+                                #calendar [room_id]="room.key"></app-calendar>
                             <p (click)="calendar.downloadConflicts()" class="cancel-btn">
                                 Book
                             </p>
@@ -52,6 +54,10 @@
                     </tr>
                 </table>
             </div>
+        </td>
+        <td *ngIf="!room || !room_type">
+
+            <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
         </td>
     </tr>
 </table>
