--- a/Client/Website/src/app/components/general/footer/footer.component.scss
+++ b/Client/Website/src/app/components/general/footer/footer.component.scss
@@ -1,6 +1,6 @@
 .main {
 
-    background-color: white;
+    // background-color: white;
     height: fit-content;
     padding: 64px;
 
@@ -11,7 +11,7 @@
     font-weight: 400;
     line-height: 25px;
     letter-spacing: 0.07em;
-    color: #14274A;
+    //color: #14274A;
 
 
 }
@@ -46,7 +46,7 @@
 
     height: fit-content;
     width: fit-content;
-    background-color: #14274A;
+    
     border-radius: 3px;
 
 }
@@ -90,7 +90,6 @@
     height: 0;
     margin-left: auto;
     margin-right: auto;
-
     border-left: 60px solid transparent;
     border-right: 60px solid transparent;
     border-bottom: 45px solid white;
